# ZigBee-Manager

./: CLAUDE.md  README.md  __init__.py  boot_guard.py  build.sh  cleanup_ha_discovery.sh  config.yaml  core.py  deploy.sh  device.py  device_capabilities.py  diag_cpc.py  groups.py  launcher.py  main.py  models.py  mqtt.py  new.py  recovery_server.py  requirements.txt  teardown.sh
config/: config.yaml
core/: __init__.py  banning.py  command_router.py  config_builder.py  database.py  lifecycle.py  mqtt_handler.py  naming.py  polling.py  service.py  tabs.py  topology.py
data/: banned_devices.json
device/: __init__.py  commands.py  core.py  discovery.py  handlers.py  state.py
docs/: announcement.md  api_docs.md  aqara_cluster_guide.md  auth.md  debugging.md  heating.md  mqtt-explorer.md  multipan.md  presence_detection.md  security.md  structure.md  upgrades.md
ha_utils/: zombie_killer.py
handlers/: __init__.py  aqara.py  aqara_agl001_schedule_patch.py  base.py  basic.py  blinds.py  diagnostics.py  fast_path.py  general.py  generic.py  hvac.py  lighting.py  lightlink.py  matter_parsers.py  new.py  poll_control.py  power.py  security.py  sensors.py  sonoff_quirk.py  switches.py  tuya.py  zigbee_debug.py  zones_handler.py
modules/: __init__.py  ai_api.py  ai_assistant.py  ai_automations.py  auth.py  auth_mfa.py  auth_middleware.py  auth_network.py  auth_secure.py  automation.py  automation_api.py  boot_guard_hooks.py  config_enhanced.py  device_ban.py  dongle_jedi.py  (+49 more)
modules/rust/zmm_cpc/: Cargo.toml
modules/rust/zmm_cpc/src/: hdlc.rs  lib.rs  py_bindings.rs
(+141 files in other folders)
